alignment issue fixed

--- a/apps/cakeFactoryWebSite/css/custom.css
+++ b/apps/cakeFactoryWebSite/css/custom.css
@@ -8,7 +8,7 @@
 
 .form-control {
     width: 40px;
-    text-align: center;
+    text-align: left;
 }
 
 /******************************************************
